cmake_minimum_required(VERSION 2.8)
project(seeds3d_demo)
set(OpenCV_DIR /Users/Zach/Zch/Research/seeds-3d/install_opencv/lib/cmake/opencv4)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(seeds3d_demo seeds3d_sample.cpp seeds3d.cpp)
target_link_libraries(seeds3d_demo ${OpenCV_LIBS})
