cmake_minimum_required(VERSION 2.8)
project(seeds_debug)
set(OpenCV_DIR /Users/Zach/Zch/Research/seeds-3d/seeds-3d/install/lib/cmake/opencv4)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(seeds_debug seeds_sample.cpp seeds.cpp)
target_link_libraries(seeds_debug ${OpenCV_LIBS})
